Add spotbugs to compile and test
* Add `enable-native-access` JVM argument to avoid respective compiler warning